<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_header"
            android:gravity="center"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="start|center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_size_checker" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/smallRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_size_small"
                    android:onClick="setPizzaSize"/>

                <RadioButton
                    android:id="@+id/mediumRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_size_medium"
                    android:onClick="setPizzaSize"/>

                <RadioButton
                    android:id="@+id/largeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_size_large"
                    android:onClick="setPizzaSize"/>
            </RadioGroup>

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rowCount="2"
            android:columnCount="2"
            android:padding="30sp">
            <CheckBox
                android:id="@+id/addon_item_1"
                android:text="@string/pizza_addon_item_1" />
            <CheckBox
                android:id="@+id/addon_item_2"
                android:text="@string/pizza_addon_item_2" />
            <CheckBox
                android:id="@+id/addon_item_3"
                android:text="@string/pizza_addon_item_3" />
            <CheckBox
                android:id="@+id/addon_item_4"
                android:text="@string/pizza_addon_item_4" />
        </GridLayout>
        <Button
            android:id="@+id/ComputePriceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Compute Price"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/viewOrderPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choose Your Order!"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/AddtoCartButton"
            android:onClick="addtoCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add to Cart"
            android:layout_marginTop="30dp"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/Checkout"
            android:onClick="checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Checkout"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="100dp"
            android:layout_weight="3"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>